fix(ui): slide item overflow hidden

--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -52,6 +52,7 @@
       width: 100%;
       height: 100%;
       opacity: 0;
+      overflow: hidden;
 
       img {
         width: inherit;
