--- a/style.css
+++ b/style.css
@@ -467,6 +467,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0;
+  overflow: hidden;
 }
 .slider .slides__item img {
   width: inherit;
@@ -578,36 +579,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 40px;
-}
-.course__heading {
-  position: relative;
-  font-size: 4rem;
-  line-height: 4.8rem;
-  font-weight: bold;
-}
-@media (min-width: 1024px) {
-  .course__heading {
-    padding-left: 30px;
-  }
-}
-.course__heading::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 3px;
-  height: 100%;
-  background-color: #c10f15;
-}
-@media (max-width: 767px) {
-  .course__heading::before {
-    display: none;
-  }
-}
-@media (min-width: 768px) and (max-width: 1023px) {
-  .course__heading::before {
-    display: none;
-  }
 }
 .course__section-wrap {
   padding: 40px 0;
